--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img\logo.png" type="image/icon type">
     <title>Roses and Tails</title>
+    <a target="_blank"  href="https://www.amazon.in/gp/product/B08FZMKDCP/ref=as_li_tl?ie=UTF8&camp=3638&creative=24630&creativeASIN=B08FZMKDCP&linkCode=as2&tag=ujjwalkapil09-21&linkId=4601242f255368a6b85064192700f4e1"><img border="0" src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=IN&ASIN=B08FZMKDCP&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=ujjwalkapil09-21" ></a>
 </head>
 <body id="body">
     <div class="wrapper" id="wrapper" >
